<resources>
    <string name="app_name">Travel Agency</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Travel Agency</string>
    <string name="nav_header_subtitle">Travel anywhere at cheap rates</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="see_all">See all</string>
    <string name="menu_travel_utility">Travel Utility</string>
    <string name="menu_offers_discounts">Offers &amp; Discounts</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact_us">Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
