<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_travel_utility"
            android:title="@string/menu_travel_utility" />
        <item
            android:id="@+id/nav_offers_discounts"
            android:title="@string/menu_offers_discounts" />
        <item
            android:id="@+id/nav_share_app"
            android:title="@string/menu_share_app" />
        <item
            android:id="@+id/nav_nav_rate_app"
            android:title="@string/menu_rate_app" />
    </group>

    <item android:title="">

        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_call"
                android:title="@string/menu_contact_us" />

        </menu>

    </item>

</menu>
